--- a/angular.json
+++ b/angular.json
@@ -121,8 +121,16 @@
               "devServerTarget": "angular-pro-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
-  "defaultProject": "angular-pro-app"
+    }
+  },
+  "defaultProject": "angular-pro-app",
+  "cli": {
+    "packageManager": "yarn"
+  }
 }
